# oilsticker_cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  make_mac_app.sh  oilstickergui  package_mac_app.sh  project_layout.txt  win_make.bat
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
OilStickerApp/OilStickerApp.app/Contents/: Info.plist
OilStickerApp/OilStickerApp.app/Contents/Frameworks/: libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libdouble-conversion.3.dylib  libfreetype.6.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphite2.3.dylib  libgthread-2.0.0.dylib  libharfbuzz.0.dylib  libicui18n.78.dylib  libicuuc.78.dylib  libintl.8.dylib  libjasper.7.dylib  libjpeg.8.dylib  liblcms2.2.dylib  libpcre2-16.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libsharpyuv.0.dylib  libssl.3.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libzstd.1.dylib
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtCore.framework/Versions/A/_CodeSignature/: CodeResources
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtGui.framework/Versions/A/_CodeSignature/: CodeResources
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtNetwork.framework/Versions/A/: QtNetwork
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtNetwork.framework/Versions/A/_CodeSignature/: CodeResources
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtOpenGL.framework/Versions/A/: QtOpenGL
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtOpenGL.framework/Versions/A/_CodeSignature/: CodeResources
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtPdf.framework/Versions/A/Resources/: Info.plist
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtPrintSupport.framework/Versions/A/: QtPrintSupport
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtQmlMeta.framework/Versions/A/: QtQmlMeta
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtQmlModels.framework/Versions/A/: QtQmlModels
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtQmlWorkerScript.framework/Versions/A/: QtQmlWorkerScript
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtSvg.framework/Versions/A/: QtSvg
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtVirtualKeyboard.framework/Versions/A/: QtVirtualKeyboard
OilStickerApp/OilStickerApp.app/Contents/Frameworks/QtVirtualKeyboardQml.framework/Versions/A/: QtVirtualKeyboardQml
OilStickerApp/OilStickerApp.app/Contents/MacOS/: oilstickergui
OilStickerApp/OilStickerApp.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
OilStickerApp/OilStickerApp.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjp2.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmng.dylib  libqpdf.dylib  libqsvg.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
OilStickerApp/OilStickerApp.app/Contents/PlugIns/networkinformation/: libqglib.dylib  libqscnetworkreachability.dylib
OilStickerApp/OilStickerApp.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
OilStickerApp/OilStickerApp.app/Contents/PlugIns/styles/: libqmacstyle.dylib
OilStickerApp/OilStickerApp.app/Contents/PlugIns/tls/: libqcertonlybackend.dylib  libqopensslbackend.dylib  libqsecuretransportbackend.dylib
OilStickerApp/OilStickerApp.app/Contents/_CodeSignature/: CodeResources
html/: index.html
html/js/: labelPreview.js
include/: LabelPreview.hpp  OilLabelGUI.hpp  version.hpp
oilstickergui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
oilstickergui_autogen/6YEA5652QU/: moc_LabelPreview.cpp  moc_LabelPreview.cpp.d  moc_OilLabelGUI.cpp  moc_OilLabelGUI.cpp.d
resources/: app_icon.rc  oilchange.icns  resources.qrc
samples/: KEYTAG.ZPL  LABEL.ZPL  LOGO.ZPL  blanklabel.zpl  default.zpl
src/: LabelPreview.cpp  OilLabelGUI copy.cpp  OilLabelGUI.cpp
zpl/: DEFAULT.ZPL  KEYTAG.ZPL  LABEL.ZPL
(+13 files in other folders)
